# algonauts_hackathon

./: .gitignore  README.md  get_vectors.py  pyproject.toml  subj07.train  subj07.val  test.py  train_validation_split_one_subj.py
